<resources>
    <string name="app_name">OtoAds</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="url_api">http://adsplus.tamboraagungmakmur.com/apps/index.php/</string>
    <string name="username_api">adsplus</string>
    <string name="password_api">adsplus73sdgf4543hfg4576t43obf</string>
    <string name="url_image">http://adsplus.tamboraagungmakmur.com/apps/resources/image/adsplus/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="histori_iklan">Histori Iklan</string>
    <string name="histori_transaksi">Histori Transaksi</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="riwayat_iklan">Riwayat Iklan</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="pesan">Pesan</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="ambil_iklan">Ambil Iklan</string>
    <string name="iklan">Iklan</string>
    <string name="distance">Distance</string>
    <string name="check_in">Check In</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="hari_pengarahan_mohon_datang_ke_kantor_ads_untuk_menerima_pengarahan_mengenai_informasi_produk_dan_pemasangan_stiker_iklan">Hari pengarahan mohon datang ke kantor ADS+ untuk menerima pengarahan mengenai informasi produk dan pemasangan stiker iklan</string>
    <string name="hari_check_in">Hari Check In</string>
    <string name="mulai_kontrak">Mulai Kontrak</string>
    <string name="akhir_kontrak">Akhir Kontrak</string>
    <string name="wilayah">Wilayah</string>
    <string name="aturan_iklan">Aturan Iklan</string>
    <string name="tolak_iklan">Tolak Iklan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="kendaraanku">KENDARAANKU</string>
    <string name="informasi_mobil">INFORMASI MOBIL</string>
    <string name="informasi_pemilik_mobil_dan_detail_mobil">Informasi pemilik mobil dan detail mobil</string>
    <string name="wilayah1">WILAYAH</string>
    <string name="stnk_amp_sim"><![CDATA[STNK & SIM]]></string>
    <string name="informasi_wilayah_yang_anda_lewati">Informasi wilayah yang Anda lewati</string>
    <string name="surat_kelengkapan_berkendara">Surat kelengkapan berkendara</string>
    <string name="keterangan">Keterangan</string>
    <string name="nama">Nama</string>
    <string name="nomor_plat">Nomor Plat</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="surabaya">Surabaya</string>
    <string name="foto_stnk">FOTO STNK</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="foto_sim">FOTO SIM</string>
    <string name="ketentuan_check_in">Ketentuan Check In</string>
    <string name="lanjut">LANJUT</string>
    <string name="batal">BATAL</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="silahkan_pilih_jenis_kendaraan_yang_ingin_dipasang_iklan">Silahkan pilih jenis kendaraan yang ingin dipasang iklan.</string>
    <string name="saya_ingin_memasang_iklan_di_mobil">Saya ingin memasang iklan di mobil</string>
    <string name="saya_ingin_memasang_iklan_di_motor">Saya ingin memasang iklan di motor</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="informasi_pribadi">INFORMASI PRIBADI</string>
    <string name="referral_code">Referral Code</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="status">Status</string>
    <string name="belum_menikah">Belum Menikah</string>
    <string name="menikah">Menikah</string>
    <string name="wanita">Wanita</string>
    <string name="pria">Pria</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="informasi_mobil_">INFORMASI MOBIL</string>
    <string name="nama_pemilik_mobil">Nama Pemilik Mobil</string>
    <string name="nomor_mobil">Nomor Mobil</string>
    <string name="merek_mobil">Merek Mobil</string>
    <string name="nama_pemilik_kendaraan">Nama Pemilik Kendaraan</string>
    <string name="nomor_polisi_kendaraan">Nomor Polisi Kendaraan</string>
    <string name="merek_kendaraan">Merek Kendaraan</string>
    <string name="tipe_kendaraan">Tipe Kendaraan</string>
    <string name="tahun_kendaraan">Tahun Kendaraan</string>
    <string name="warna_kendaraan">Warna Kendaraan</string>
    <string name="surat_kelengkapan_berkendara_">SURAT KELENGKAPAN BERKENDARA</string>
    <string name="sim">SIM</string>
    <string name="stnk">STNK</string>
    <string name="ktp">KTP</string>
    <string name="informasi_wilayah_yang_anda_lewati_">INFORMASI WILAYAH YANG ANDA LEWATI</string>
    <string name="kota">Kota</string>
    <string name="pembayaran">PEMBAYARAN</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string-array name="spinner_merek_kendaraan">
        <item>BMW</item>
        <item>Suzuki</item>
        <item>Daihatsu</item>
    </string-array>


    <string-array name="spinner_tipe_kendaraan">
        <item>X1</item>
        <item>X3</item>
        <item>X4</item>
        <item>Z4</item>
    </string-array>

    <string-array name="spinner_tahun_kendaraan">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>

    <string-array name="spinner_warna_kendaraan">
        <item>Merah</item>
        <item>Kuning</item>
        <item>Hijau</item>
    </string-array>

    <string-array name="spinner_kota">
        <item>Surabaya</item>
        <item>Sidoarjo</item>
        <item>Malang</item>
    </string-array>

    <string-array name="spinner_wilayah">
        <item>Gresik</item>
        <item>Pasuruan</item>
        <item>Mojokerto</item>
    </string-array>

    <string name="masukkan_kode">Masukkan Kode Verifikasi</string>
    <string name="verifikasi">Silahkan cek SMS-mu.</string>
    <string name="verifikasi2">Lalu masukkan kode verifikasi yang tertera. (Tunggu 230 detik)</string>
    <string name="sukses">Resitrasi Berhasil</string>
    <string name="kamiakanmenghubungi">Kami akan menghubungi anda via telepon untuk proses selanjutnya</string>
</resources>
