<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/check_in"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hari_pengarahan_mohon_datang_ke_kantor_ads_untuk_menerima_pengarahan_mengenai_informasi_produk_dan_pemasangan_stiker_iklan"/>

    <FrameLayout
        android:id="@+id/calendar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_checkin_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/hari_check_in"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_checkin_orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/mulai_kontrak"/>

        <Button
            android:layout_width="20dp"
            android:layout_margin="5dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_checkin_red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/akhir_kontrak"/>

    </LinearLayout>

    <Button
        android:id="@+id/checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button_green_next"
        android:textColor="@android:color/white"
        android:text="@string/check_in"/>

</LinearLayout>
</ScrollView>