<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:background="@color/colorGreyLight1"
        android:padding="20dp"
        android:text="@string/wilayah"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreyLight1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/informasi_wilayah_yang_anda_lewati"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_wilayah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>


            <Button
                android:id="@+id/save"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorButtonOrange"
                android:background="@drawable/bg_button_orange2"
                android:layout_gravity="center_horizontal"
                android:text="@string/simpan_data"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>